--- a/css/test.css
+++ b/css/test.css
@@ -1,4 +1,11 @@
+body {
+  background: #240007;
+  background: linear-gradient(90deg, rgba(36, 0, 7, 0.753939) 0%, rgba(171, 11, 114, 0.843575) 35%, rgba(231, 0, 255, 0.493435) 100%); }
+
 .stage {
-  width: 40%;
-  height: 200px;
-  margin: 50px auto; }
+  width: 80%;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  background: white;
+  margin: 5% auto; }
