--- a/css/test.css
+++ b/css/test.css
@@ -1,6 +1,12 @@
 body {
   background: #240007;
   background: linear-gradient(90deg, rgba(36, 0, 7, 0.753939) 0%, rgba(171, 11, 114, 0.843575) 35%, rgba(231, 0, 255, 0.493435) 100%); }
+  body.nightStorm {
+    background: url(https://cdn.glitch.com/4f83b17b-3d9a-4782-bfb9-3298fce7ff84%2Fstormynight.jpg?1516228334292) !important;
+    background-size: cover !important; }
+
+.noPadding {
+  padding: 0 !important; }
 
 .stage {
   width: 80%;
@@ -9,3 +15,12 @@ body {
   border-radius: 10px;
   background: white;
   margin: 5% auto; }
+  .stage .header-stage {
+    -webkit-border-top-left-radius: 10px;
+    -webkit-border-top-right-radius: 10px;
+    -moz-border-radius-topleft: 10px;
+    -moz-border-radius-topright: 10px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    width: 100%;
+    height: 300px; }
