--- a/scss/test.scss
+++ b/scss/test.scss
@@ -1,7 +1,14 @@
 body {
+    &.nightStorm {
+        background: url(https://cdn.glitch.com/4f83b17b-3d9a-4782-bfb9-3298fce7ff84%2Fstormynight.jpg?1516228334292) !important;
+        background-size: cover !important;
+    }
     background: rgb(36,0,7);
 background: linear-gradient(90deg, rgba(36,0,7,0.7539390756302521) 0%, rgba(171,11,114,0.8435749299719888) 35%, rgba(231,0,255,0.49343487394957986) 100%);
 }
+
+//General Classes
+.noPadding {padding: 0 !important;}
 
 .stage {
     width: 80%;
@@ -10,4 +17,15 @@ background: linear-gradient(90deg, rgba(36,0,7,0.7539390756302521) 0%, rgba(171,
     border-radius: 10px;
     background: white;
     margin: 5% auto;
+
+    .header-stage {
+        -webkit-border-top-left-radius: 10px;
+        -webkit-border-top-right-radius: 10px;
+        -moz-border-radius-topleft: 10px;
+        -moz-border-radius-topright: 10px;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+        width: 100%;
+        height: 300px;
+    }
 } 
